--- a/incentives.html
+++ b/incentives.html
@@ -344,11 +344,11 @@
         <a href="ai.html">AI Assistant</a>
         <a href="schedule.html">Schedule Pickup</a>
         <a href="marketplace.html">Marketplace</a>
-        <a href="incentives.html">Incentives</a>
+        <a href="incentives.html">Rewards</a>
     </nav>
 
     <div class="container">
-        <h2>Available Incentives</h2>
+        <h2>Available Rewards</h2>
         <div class="incentive">
             <div>
                 <h3>Discount on Purchase</h3>
@@ -375,10 +375,10 @@
     <div class="popup" id="popup">
         <div class="popup-content">
             <div class="popup-header">
-                <h3>Redeem Incentive</h3>
+                <h3>Redeem Reward</h3>
                 <span class="close" id="close-popup">&times;</span>
             </div>
-            <p>Are you sure you want to redeem this incentive?</p>
+            <p>Are you sure you want to redeem this Reward?</p>
             <div class="popup-footer">
                 <button id="confirm-redeem">OK</button>
             </div>
