--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
         <a href="ai.html">AI Assistant</a>
         <a href="schedule.html">Schedule Pickup</a>
         <a href="marketplace.html">Marketplace</a>
-        <a href="incentives.html">Incentives</a>
+        <a href="incentives.html">Rewards</a>
     </nav>
 
     <div class="hero">
@@ -343,7 +343,7 @@
             <button onclick="navigateTo('marketplace.html')">Visit</button>
         </div>
         <div class="feature">
-            <h3>Incentives</h3>
+            <h3>Rewards</h3>
             <p>Earn rewards and redeem them for managing e-waste responsibly.</p>
             <button onclick="navigateTo('incentives.html')">Redeem</button>
         </div>
