--- a/marketplace.html
+++ b/marketplace.html
@@ -322,7 +322,7 @@
         <a href="ai.html">AI Assistant</a>
         <a href="schedule.html">Schedule Pickup</a>
         <a href="marketplace.html">Marketplace</a>
-        <a href="incentives.html">Incentives</a>
+        <a href="incentives.html">Rewards</a>
     </nav>
 
     <div class="container">
