--- a/incentives.html
+++ b/incentives.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Incentives</title>
+    <title>Rewards</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -406,7 +406,7 @@
         });
 
         confirmRedeem.addEventListener('click', function() {
-            alert('Incentive redeemed!');
+            alert('Reward redeemed!');
             popup.style.display = 'none';
         });
     </script>
