--- a/schedule.html
+++ b/schedule.html
@@ -291,7 +291,7 @@
         <a href="ai.html">AI Assistant</a>
         <a href="schedule.html">Schedule Pickup</a>
         <a href="marketplace.html">Marketplace</a>
-        <a href="incentives.html">Rewrds</a>
+        <a href="incentives.html">Rewards</a>
     </nav>
 
     <div class="container">
