--- a/incentives.html
+++ b/incentives.html
@@ -328,7 +328,7 @@
 </head>
 <body>
     <header>
-        <h1>Incentives</h1>
+        <h1>Rewards</h1>
         <div class="points-counter">
             800 Points
             <div class="tips">
